# LLM_Nature_Suite

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all_witnesses.sh
llm_nature/: char_ngram.py  compare_ngram_transformer.py  context_space_table.py  export_k_sweep_corpus_all.py  markdown_Htest_grid.py  markdown_compare_ngram_transformer.py  markdown_qa_summary.py  ngram.py  qa_inspect.py  qa_witness.py  toy_transformer.py  word_ngram.py
llm_nature/data/: paragraph.txt  qa_corpus.txt
tests/: test_explicit_witness.py  test_qa_witness.py
