[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-nature-suite"
version = "0.1.0"
description = "LLM Nature Suite: minimal n-gram + toy transformer experiments"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["llm_nature"]
